--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id="container">
         <form>
-<p>test test test</p>
+<p>Funker?</p>
         <p id="losning"> </p>
         <p id="bokstaver"> Du har gjettet: </p>
             <p id="beskjed"></p>
